# vetwebapi

./: .gitignore  package.json
vetwebapi/: .dev.env  .env.txt  .flake8  Makefile  ToDo.md  default_image,conf  docker-compose.yml  nginx.conf  pyproject.toml
vetwebapi/docs/: TODO.md
vetwebapi/docs/backend/: Auth.md  Linting.md  Models.md  SettingsProjectAndDB.md
vetwebapi/docs/frontend/: CompaniesPage.md  Jinja2.md  TailWind.md
vetwebapi/docs/frontend/cssLessons/: DisplayBlock.md  Flexbox.md
vetwebapi/docs/frontend/reactLessons/: Aliases.md  DetailPage.md  ReactAxios.md  ReactQuery.md  ReactRouter.md  YarnAndViteReact.md
vetwebapi/migrations/: env.py
vetwebapi/migrations/versions/: 2023_12_22_1739-df2186b5bda5_initial.py  2023_12_23_2051-7f1e5c3a5712_first_migration.py  2023_12_28_1525-7974d324c286_initial.py  2023_12_31_1706-564702b11d4a_initial.py  2024_01_12_1133-35a5d9e5fa57_initial.py  2024_01_24_1324-b337d3d9a693_initial.py  2024_01_25_1557-5537ea989283_initial.py  2024_01_26_1124-a836a362ae0b_initial.py  2024_02_26_0832-45992d45c164_initial.py  2024_04_07_1406-d2eec2967ca0_initial.py  2024_05_04_2209-56ad04570c24_initial.py  2024_05_05_1502-b86acbdfa355_initial.py  2024_05_05_1919-7da522a95675_initial.py  2024_05_08_1300-22e56693f695_initial.py  2024_05_20_1959-97b38054f843_initial.py  2024_07_09_1825-1d71a7cc4872_initial.py
vetwebapi/vetwebapi/: .dockerignore  .env.txt  .flake8  Dockerfile  Makefile  alembic.ini  app.sh  main.py  pyproject.toml  streets.txt
vetwebapi/vetwebapi/api_v1/: __init__.py  dependencies.py  schemas.py
vetwebapi/vetwebapi/api_v1/animal/: crud.py  dependencies.py  schemas.py  views.py
vetwebapi/vetwebapi/api_v1/auth/: crud.py  dependencies.py  schemas.py  views.py
vetwebapi/vetwebapi/api_v1/company/: crud.py  dependencies.py  schemas.py  serializers.py  views.py
vetwebapi/vetwebapi/api_v1/drug/: crud.py  dependencies.py  schemas.py  serializers.py  views.py
vetwebapi/vetwebapi/api_v1/drugs/: crud.py  dependencies.py  schemas.py  views.py
vetwebapi/vetwebapi/api_v1/user/: views.py
vetwebapi/vetwebapi/api_v1/vet_work/: crud.py  dependencies.py  schemas.py  serializers.py  views.py
vetwebapi/vetwebapi/core/: database.py  hawkcatcher.py  settings.py
vetwebapi/vetwebapi/core/models/: __init__.py  base.py
vetwebapi/vetwebapi/files/animals/: dusch11.csv  obppsp.csv
vetwebapi/vetwebapi/frontend/: __init__.py
vetwebapi/vetwebapi/migrations/: env.py
vetwebapi/vetwebapi/tests/: conftest.py  test_company_api.py  test_main.py
vetwebapi/vetwebapi/utils/: utils.py
vetwebapi/vetwebfrontend/: index.html  package.json  vite.config.js
vetwebapi/vetwebfrontend/src/: App.jsx  main.jsx
vetwebapi/vetwebfrontts/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tailwind.config.mjs  tsconfig.json  vite.config.ts
vetwebapi/vetwebfrontts/nginx/: default.conf  nginx.conf
vetwebapi/vetwebfrontts/public/: styles.css  styles.css.map
vetwebapi/vetwebfrontts/src/: App.tsx  Constants.ts  Urls.ts  app.service.ts  main.tsx
(+1017 files in other folders)
